crates/libaipm/src/workspace_init/adaptors/snapshots/libaipm__workspace_init__adaptors__copilot__tests__template_snapshot_no_starter.snap
---
source: crates/libaipm/src/workspace_init/adaptors/copilot.rs
expression: body
---
# Copilot Instructions

This project uses [aipm](https://github.com/TheLarkInn/aipm) to manage AI plugins.
The local marketplace lives at `.ai/` and is registered as `local-repo-plugins`.

<!-- aipm marketplace pointer; do not edit between markers -->
<!-- AIPM_MARKETPLACE: local-repo-plugins -->
